--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -178,7 +178,7 @@
         <Button
             android:id="@+id/start"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/start" />
