--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -34,7 +34,8 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="5dp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <TextView
                 android:text="0"
@@ -44,7 +45,8 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:clickable="true"
-                android:onClick="onAPStats"  />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <ImageView
                 android:layout_height="@android:dimen/app_icon_size"
@@ -56,7 +58,8 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="5dp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <TextView
                 android:text="0"
@@ -66,7 +69,8 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
         </android.support.v7.widget.Toolbar>
 
