--- a/app/src/main/res/layout-normal/activity_main.xml
+++ b/app/src/main/res/layout-normal/activity_main.xml
@@ -36,7 +36,8 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="5dp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <TextView
                 android:text="0"
@@ -46,7 +47,8 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:clickable="true"
-                android:onClick="onAPStats"  />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <ImageView
                 android:layout_height="@android:dimen/app_icon_size"
@@ -58,7 +60,8 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="5dp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
             <TextView
                 android:text="0"
@@ -68,7 +71,8 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:clickable="true"
-                android:onClick="onAPStats" />
+                android:onClick="onAPStats"
+                android:focusable="true" />
 
         </android.support.v7.widget.Toolbar>
 
