--- a/app/src/main/res/drawable/st_drawable.xml
+++ b/app/src/main/res/drawable/st_drawable.xml
@@ -6,6 +6,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:pathData="M4 6h18V4H4c-1.1 0-2 00.9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-00000.55 0-1 000.45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-0.45 1-1V9c0-0.55-0.45-1-1-1zm-1 9h-4v-7h4v7z"
+        android:pathData="M4 6h18V4H4c-1.1 0-2 00.9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-00000.55 0-1 000.45-1 1v10c0 0.55 0.45 1 1 1h6c0.55 0 1-0.45 1-1V9c0-0.55-0.45-1-1-1zm-1 9h-4v-7h4v7z"
         android:fillColor="@android:color/white"/>
 </vector>
