--- a/app/src/main/res/layout-large/listitem.xml
+++ b/app/src/main/res/layout-large/listitem.xml
@@ -5,18 +5,35 @@
               android:layout_height="wrap_content"
               android:padding="9dp">
 
-    <ImageView
-        android:id="@+id/iv"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:maxHeight="100dp"
-        android:maxWidth="50dp"
-        android:paddingBottom="5dp"
-        android:paddingEnd="10dp"
-        android:paddingStart="5dp"
-        android:paddingTop="5dp"
-        app:srcCompat="@drawable/ap2"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxHeight="100dp"
+            android:maxWidth="50dp"
+            android:paddingBottom="5dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="5dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/ap2" />
+
+        <TextView
+            android:id="@+id/icon_count_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv"
+            android:layout_alignEnd="@+id/iv"
+            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="10dp"
+            android:text="100"
+            android:textColor="@android:color/white"
+            android:textSize="12sp" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
