--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -19,6 +19,10 @@
             android:summary="@string/watchdog_sum"
             android:title="@string/watchdog_title" />
         <SwitchPreference
+            android:defaultValue="@string/show_client_count"
+            android:key="show_client_count"
+            android:title="@string/show_client_count_title" />
+        <SwitchPreference
             android:defaultValue="@string/debug"
             android:key="debug"
             android:summary="@string/debug_sum"
