Use Object.wait/notify instead of semaphores for dialog synchronization, move DisclaimerDialog and FirstRunDialog after initialization and synchronize them, add root access check, reorganize initialization tasks

--- a/app/src/main/res/layout/install_firmware.xml
+++ b/app/src/main/res/layout/install_firmware.xml
@@ -86,7 +86,7 @@
         android:id="@+id/backup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="true"
-        android:text="@string/create_backup"/>
+        android:checked="false"
+        android:text="@string/create_backup" />
 
 </LinearLayout>
