--- a/app/src/main/res/layout/reaver_fragment.xml
+++ b/app/src/main/res/layout/reaver_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="@string/select_ap" />
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -34,9 +34,9 @@
                 android:maxLines="1"
                 android:text="1" />
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -50,7 +50,7 @@
                 android:maxLines="1"
                 android:text="60" />
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <CheckBox
             android:id="@+id/pixie_dust"
