--- a/app/src/main/res/layout/custom_action_manager.xml
+++ b/app/src/main/res/layout/custom_action_manager.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
